# Workspace

./: .gitignore  .xml  CMakeLists.txt  README.md  Workspace  Workspace.sln  Workspace.vcxproj  Workspace.vcxproj.filters  Workspace.xml  build.sh  build_debug.sh  extra.sh
.buildSystem/linux/: build.sh  buildFile.sh  buildFile_debug.sh  buildFolder.sh  buildFolder_debug.sh  buildProject.sh  buildProject_debug.sh  build_debug.sh  envVars.sh  runTest.sh
Algorithms/: CMakeLists.txt  mAlgorithms.cpp  tests.h
Algorithms_under_dev/: mAlgorithms.h  tests.h
Core/: mapi.h
DynamicArray/: mDynamicArray.cpp  tests.h
GTest/AnotherTest/: CMakeLists.txt
GTest/AnotherTest/src/: CMakeLists.txt  Formula.cpp  Formula.h  main.cpp
GTest/AnotherTest/tst/: CMakeLists.txt  Formula-test.cpp
GTest/gtest_building/: CMakeLists.txt  Makefile.manual.failed  mainTestAll  mainTestAll.cpp  mainTestAll.xml
GTest/gtest_building2/: CMakeLists.txt  bank.h  mainTestAll.cpp  runAllTests.cpp  tests.cpp
GTest/gtest_test/: CMakeLists.txt  test_with_gtest.cpp
Hash/: CMakeLists.txt
Hash_under_dev/: CMakeLists.txt  mHash.cpp  tests.h
LinkedList/: CMakeLists.txt  mLinkedList.cpp  tests.h
List/: CMakeLists.txt  main.cpp  tests.h
List_under_dev/: CMakeLists.txt  mList.cpp  main.cpp  tests.h
MArray/: CMakeLists.txt  mArray.cpp  mArray.h  tests.h
MArray/MArray_tst/: main.cpp
MArray/tests/: tests.h
MMath/: CMakeLists.txt
MString/: CMakeLists.txt  mString.cpp  mString.h  tests.h
MString/MString_tst/: CMakeLists.txt  main.cpp
Map/: CMakeLists.txt
Map_under_dev/: mMap.cpp  tests.h
Queue/: CMakeLists.txt  mQueue.cpp  tests.h
Queue_under_dev/: tests.h
Set/: CMakeLists.txt  tests.h
Set_under_dev/: CMakeLists.txt  mSet.cpp  tests.h
Stack/: CMakeLists.txt
Stack_under_dev/: tests.h
String/: CMakeLists.txt  mString.cpp  mString.h  tests.h
Tree/: CMakeLists.txt
Tree_under_dev/: mTree.cpp  tests.h
Trie/: CMakeLists.txt  mTrie.cpp  tests.h
Trie_under_dev/: CMakeLists.txt  tests.h
Vector/: CMakeLists.txt  mVector.cpp  mVector.h  tests.h
_oldBuiiiiiiiild/: build.bat
_testBuildFile/: CMakeLists.txt  main  main.cpp  main2  main2.cpp
_testBuildFolder/: CMakeLists.txt  _testBuildFolder  main.cpp
buildAPI/: CMakeLists.txt
src/: CMakeLists.txt  WString.cpp  WString.h  api.h  callgrind.out.21985  core.h  main  main.cpp  mstrings.cpp  mstrings.h  runAllTests  runAllTests.cpp  runAllTests.xml  string.cpp  string.h  tests.cpp  tests.h  wstring.cpp  wstring.h
study/: pointers_study.cpp
tests/: mstrings_tests.h  wstring_tests.h
